# light_pollution_map

./: .dockerignore  .gitignore  Cargo.toml  README.md  TODO  compose.yml  compose_deployment_demo.yml  dl_service.dockerfile  map_gen.dockerfile
.github/workflows/: build.yml  publish_demo.yml
docker/: Containerfile  compose.yml  compose_deployment_demo.yml
garstang/: Cargo.toml  geogebra_garstang.ggb  geogebra_garstang_1989.ggb
garstang/src/: common.rs  garstang_1986.rs  garstang_1989.rs  lib.rs  main.rs
geotiff_converter/: Containerfile  compose.yml  hdf5_to_geotiff.py
hdf5_to_geotiff/: Cargo.toml  Containerfile  compose.yml
hdf5_to_geotiff/src/: main.rs
leaflet_demo/: Containerfile  compose.yml  package.json
leaflet_demo/src/: App.css  App.js
map_generation/: Cargo.toml
map_generation/src/: common.rs  crawl.rs  gradient.rs  main.rs  stencil.rs
sat_dl/: .dockerignore  Cargo.toml  Containerfile  README.md  compose.yml  folder_contents.json
sat_dl/dummy/: main.rs
sat_dl/src/: main.rs
sat_dl/src/convert/: gdal_hdf5_to_geotiff.rs  mod.rs
sat_dl/src/download/: dir_download.rs  hdf5_download.rs  mod.rs
src/: main.rs
