[package]
name = "garstang"
version.workspace = true
edition.workspace = true
authors.workspace = true
# description.workspace = true
# documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
tokio = { version = "1.25.0", features = ["full"] }
