[package]
name = "map_generation"
version.workspace = true
authors.workspace = true
edition.workspace = true
# description.workspace = true
# documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiff = "0.9.0"
image = "0.24.6"
colorgrad = "0.6.2"
garstang = { path = "../garstang" }
serde_json = "1.0.96"
rstar = "0.10.0"
array-init = "2.1.0"
geo = "0.24.1"
atomic-array = "0.3.1"