[package]
name = "map_generation"
version.workspace = true
authors.workspace = true
edition.workspace = true
# description.workspace = true
# documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
colorgrad = "0.6.2"
garstang = { path = "../garstang" }
serde_json = "1.0.96"
geo = "0.24.1"