[package]
name = "map_generation"
version.workspace = true
authors.workspace = true
edition.workspace = true
# description.workspace = true
# documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiff = "0.9.0"
image = "0.24.6"
garstang = { path = "../garstang" }
serde_json = "1.0.96"
geo = "0.27.0"

