[package]
name = "sat_dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
reqwest = { version = "0.11", features = ["json","blocking"] }
tokio = { version = "1.25.0", features = ["full"] }
hdf5 = "0.8.1"
chrono = "0.4.23"
